--- a/.github/workflows/vanilla_gcc_optO1.yml
+++ b/.github/workflows/vanilla_gcc_optO1.yml
@@ -9,16 +9,16 @@ jobs:
     strategy:
       #max-parallel: 10
       matrix:
-        cc: [clang]
+        cc: [gcc]
         blinding: [0, 1]
         complete: [0, 1]
         ladder: [0, 1]
         cryptofuzz: [0, 1]
-        optflags: ["-O0", "-O1"]
+        optflags: ["-O1"]
     steps:
       # Checkout repository
       - name: checkout repository
-        uses: actions/checkout@v2      
+        uses: actions/checkout@v2
       # Run actions
       # Vanilla tests
       - name: vanilla tests
