SEC-1: add compilation option to create initial patterns
Signed-off-by: Massimiliano Bartoli <mbartoli@upmem.com>

--- a/src/examples/Makefile
+++ b/src/examples/Makefile
@@ -11,6 +11,9 @@ CFLAGS += -I$(ROOT_DIR)/src/ -I$(ROOT_DIR)/src/external_deps
 WARNING_CFLAGS ?= -Wall -Wextra
 HOST_LDFLAGS = `dpu-pkg-config --libs dpu`
 HOST_CFLAGS = $(WARNING_CFLAGS) -std=c11 `dpu-pkg-config --cflags dpu` -O2
+ifdef SW
+HOST_CFLAGS += -DGEN_BY_SW=1 -DLOG_GENERATED=1
+endif
 
 all:	dpu  host
 ifeq ($(WITH_DYNAMIC_LIBS),1)
