Factorize some code in common.h for userful functions that can be reused in other algorithms (i2osp, os2ip, unprotected modular exponentiation in NN, etc.).

--- a/src/examples/rsa/Makefile
+++ b/src/examples/rsa/Makefile
@@ -16,7 +16,7 @@ rsa:
 # If the user asked for dynamic libraries, compile versions of our binaries against them
 ifeq ($(WITH_DYNAMIC_LIBS),1)
 rsa_dyn:
-	$(CC) $(BIN_CFLAGS) -DRSA rsa.c ../hash/hash.c $(ROOT_DIR)/src/external_deps/print.c $(ROOT_DIR)/src/external_deps/rand.c $(BIN_LDFLAGS) $(LIBEC) -L$(BUILD_DIR) -lsign -o $(RSA_DIR)/rsa_dyn
+	$(CC) $(BIN_CFLAGS) -DRSA rsa.c ../hash/hash.c $(ROOT_DIR)/src/external_deps/print.c $(ROOT_DIR)/src/external_deps/rand.c $(BIN_LDFLAGS) $(LIBEC) -L$(BUILD_DIR) -lsign -o rsa_dyn
 endif
 
 
