SEC-1: share the input data in MRAM
Signed-off-by: Massimiliano Bartoli <mbartoli@upmem.com>

--- a/src/DPU/Makefile
+++ b/src/DPU/Makefile
@@ -13,7 +13,9 @@ HOST_CFLAGS = $(WARNING_CFLAGS) -std=c11 `dpu-pkg-config --cflags dpu` -O2
 ifdef SW
 HOST_CFLAGS += -DGEN_BY_SW=1 -DLOG_GENERATED=1
 endif
-
+ifdef SIG_KO
+HOST_CFLAGS += -DSIG_KO
+endif
 all:	dpu  host
 ifeq ($(WITH_DYNAMIC_LIBS),1)
 # If the user asked for dynamic libraries, compile versions of our binaries against them
