--- a/src/examples/Makefile
+++ b/src/examples/Makefile
@@ -3,13 +3,14 @@ BUILD_DIR=$(ROOT_DIR)/build
 include $(ROOT_DIR)/common.mk
 
 RSA_DIR=rsa/
+DSA_DIR=dsa/
 
 CFLAGS += -I$(ROOT_DIR)/src/ -I$(ROOT_DIR)/src/external_deps
 
-all:	nn_example fp_example curve_basic_examples curve_ecdh _rsa sss
+all:	nn_example fp_example curve_basic_examples curve_ecdh _rsa _dsa sss
 ifeq ($(WITH_DYNAMIC_LIBS),1)
 # If the user asked for dynamic libraries, compile versions of our binaries against them
-all:	nn_example_dyn fp_example_dyn curve_basic_examples_dyn curve_ecdh_dyn _rsa_dyn sss_dyn
+all:	nn_example_dyn fp_example_dyn curve_basic_examples_dyn curve_ecdh_dyn _rsa_dyn _dsa_dyn sss_dyn
 endif
 
 nn_example:
@@ -25,6 +26,8 @@ curve_ecdh:
 
 _rsa:
 	cd $(RSA_DIR) && EXTRA_CFLAGS="$(CFLAGS)" make
+_dsa:
+	cd $(DSA_DIR) && EXTRA_CFLAGS="$(CFLAGS)" make
 sss:
 	$(CC) $(BIN_CFLAGS) -DSSS sss.c $(ROOT_DIR)/src/external_deps/print.c $(ROOT_DIR)/src/external_deps/rand.c $(BIN_LDFLAGS) $(LIBSIGN) -o sss
 
@@ -43,6 +46,8 @@ curve_ecdh_dyn:
 
 _rsa_dyn:
 	cd $(RSA_DIR) && EXTRA_CFLAGS="$(CFLAGS)" make
+_dsa_dyn:
+	cd $(DSA_DIR) && EXTRA_CFLAGS="$(CFLAGS)" make
 sss_dyn:
 	$(CC) $(BIN_CFLAGS) -DSSS sss.c $(ROOT_DIR)/src/external_deps/print.c $(ROOT_DIR)/src/external_deps/rand.c $(BIN_LDFLAGS) $(LIBEC) -L$(BUILD_DIR) -lsign -o sss_dyn
 endif
@@ -52,5 +57,6 @@ clean:
 	@rm -f nn_pollard_rho fp_square_residue curve_basic_examples curve_ecdh sss
 	@rm -f nn_pollard_rho_dyn fp_square_residue_dyn curve_basic_examples_dyn curve_ecdh_dyn sss_dyn
 	cd $(RSA_DIR) && make clean
+	cd $(DSA_DIR) && make clean
 
 .PHONY: all clean 16 32 64 debug debug16 debug32 debug64 force_arch32 force_arch64
