Various minor fixes following more agressive warning flags:
-Wall -Winvalid-pch -Wextra -std=gnu99 -g -Wno-format-signedness
-Wno-missing-field-initializers -Wno-unused-parameter -Wno-unused-result
-Wdate-time -Wendif-labels -Werror=format=2 -Werror=implicit-function-declaration
-Werror=incompatible-pointer-types -Werror=overflow -Werror=return-type
-Werror=shift-count-overflow -Werror=shift-overflow=2 -Werror=undef -Wfloat-equal
-Wimplicit-fallthrough=5 -Winit-self -Wlogical-op -Wmissing-include-dirs
-Wmissing-noreturn -Wnested-externs -Wold-style-definition -Wpointer-arith
-Wredundant-decls -Wshadow -Wstrict-aliasing=2 -Wstrict-prototypes
-Wsuggest-attribute=noreturn -Wwrite-strings -Werror=missing-declarations
-Werror=missing-prototypes -fdiagnostics-show-option -ffast-math  -fno-common
-fno-strict-aliasing -fstack-protector -fstack-protector-strong -fvisibility=hidden
--param=ssp-buffer-size=4 -Werror=shadow -fPIC -pthread -fvisibility=default

This spotted duplicated declarations, shadowed type names used as functions
arguments names, etc.

Credits for raising the issues: @nbouchinet-anssi

--- a/src/examples/dsa/Makefile
+++ b/src/examples/dsa/Makefile
@@ -2,6 +2,9 @@ ROOT_DIR=../../..
 BUILD_DIR=$(ROOT_DIR)/build
 include $(ROOT_DIR)/common.mk
 
+# Remove old includes with bad relative folders
+CFLAGS := $(patsubst -I%,,$(CFLAGS))
+# Add proper includes
 CFLAGS += -I$(ROOT_DIR)/src/ -I$(ROOT_DIR)/src/external_deps
 
 all:	dsa
