--- a/src/examples/sss/Makefile
+++ b/src/examples/sss/Makefile
@@ -7,24 +7,24 @@ CFLAGS := $(patsubst -I%,,$(CFLAGS))
 # Add proper includes
 CFLAGS += -I$(ROOT_DIR)/src/ -I$(ROOT_DIR)/src/external_deps
 
-all:	dsa
+all:	sss
 ifeq ($(WITH_DYNAMIC_LIBS),1)
 # If the user asked for dynamic libraries, compile versions of our binaries against them
-all:	dsa_dyn
+all:	sss_dyn
 endif
 
-dsa:
-	$(CC) $(BIN_CFLAGS) -DDSA dsa.c ../hash/hash.c $(ROOT_DIR)/src/external_deps/print.c $(ROOT_DIR)/src/external_deps/rand.c $(BIN_LDFLAGS) $(LIBSIGN) -o dsa
+sss:
+	$(CC) $(BIN_CFLAGS) -DSSS sss.c $(ROOT_DIR)/src/external_deps/print.c $(ROOT_DIR)/src/external_deps/rand.c $(BIN_LDFLAGS) $(LIBSIGN) -o sss
 
 # If the user asked for dynamic libraries, compile versions of our binaries against them
 ifeq ($(WITH_DYNAMIC_LIBS),1)
-dsa_dyn:
-	$(CC) $(BIN_CFLAGS) -DDSA dsa.c ../hash/hash.c $(ROOT_DIR)/src/external_deps/print.c $(ROOT_DIR)/src/external_deps/rand.c $(BIN_LDFLAGS) $(LIBEC) -L$(BUILD_DIR) -lsign -o dsa_dyn
+sss_dyn:
+	$(CC) $(BIN_CFLAGS) -DSSS sss.c $(ROOT_DIR)/src/external_deps/print.c $(ROOT_DIR)/src/external_deps/rand.c $(BIN_LDFLAGS) $(LIBSIGN) -L$(BUILD_DIR) -lsign -o sss_dyn
 endif
 
 
 clean:
-	@rm -f dsa
-	@rm -f dsa_dyn
+	@rm -f sss
+	@rm -f sss_dyn
 
 .PHONY: all clean 16 32 64 debug debug16 debug32 debug64 force_arch32 force_arch64
