Small fixes in RSA and SSS Makefile examples.

--- a/src/examples/sss/Makefile
+++ b/src/examples/sss/Makefile
@@ -7,6 +7,8 @@ CFLAGS := $(patsubst -I%,,$(CFLAGS))
 # Add proper includes
 CFLAGS += -I$(ROOT_DIR)/src/ -I$(ROOT_DIR)/src/external_deps
 
+KEEP_SYMBOLS=--keep-global-symbol=sss_generate --keep-global-symbol=sss_combine --keep-global-symbol=sss_regenerate
+
 all:	sss
 ifeq ($(WITH_DYNAMIC_LIBS),1)
 # If the user asked for dynamic libraries, compile versions of our binaries against them
@@ -16,6 +18,17 @@ endif
 sss:
 	$(CC) $(BIN_CFLAGS) -DSSS sss.c $(ROOT_DIR)/src/external_deps/print.c $(ROOT_DIR)/src/external_deps/rand.c $(BIN_LDFLAGS) $(LIBSIGN) -o sss
 
+sss_lib:
+	# Compile libsss archive
+	$(CC) $(LIB_CFLAGS) -c sss.c $(ROOT_DIR)/src/external_deps/print.c $(ROOT_DIR)/src/external_deps/rand.c
+	cp $(LIBSIGN) ./
+	$(AR) xv libsign.a
+	# Make unnecessary symbols local
+	for f in `ls *.o`; do objcopy $(KEEP_SYMBOLS) $$f && echo "Processing $$f"; done
+	# Combine the archives
+	$(AR) $(AR_FLAGS) libsss.a *.o
+	@rm -f *.o libsign.a
+
 # If the user asked for dynamic libraries, compile versions of our binaries against them
 ifeq ($(WITH_DYNAMIC_LIBS),1)
 sss_dyn:
@@ -24,6 +37,7 @@ endif
 
 
 clean:
+	@rm -f *.o
 	@rm -f sss
 	@rm -f sss_dyn
 
