Add SDSA (Shnorr DSA) as decribed in ISO14888-3 as an example of using libecc.

--- a/src/examples/Makefile
+++ b/src/examples/Makefile
@@ -5,15 +5,16 @@ include $(ROOT_DIR)/common.mk
 HASH_DIR=hash/
 RSA_DIR=rsa/
 DSA_DIR=dsa/
+SDSA_DIR=sdsa/
 GOST_DIR=gostr34_10_94/
 SSS_DIR=sss/
 
 CFLAGS += -I$(ROOT_DIR)/src/ -I$(ROOT_DIR)/src/external_deps
 
-all:	nn_example fp_example curve_basic_examples curve_ecdh _hash _rsa _dsa _gost _sss
+all:	nn_example fp_example curve_basic_examples curve_ecdh _hash _rsa _dsa _sdsa _gost _sss
 ifeq ($(WITH_DYNAMIC_LIBS),1)
 # If the user asked for dynamic libraries, compile versions of our binaries against them
-all:	nn_example_dyn fp_example_dyn curve_basic_examples_dyn curve_ecdh_dyn _hash_dyn _rsa_dyn _dsa_dyn _gost_dyn _sss_dyn
+all:	nn_example_dyn fp_example_dyn curve_basic_examples_dyn curve_ecdh_dyn _hash_dyn _rsa_dyn _dsa_dyn _sdsa_dyn _gost_dyn _sss_dyn
 endif
 
 nn_example:
@@ -33,6 +34,8 @@ _rsa:
 	cd $(RSA_DIR) && EXTRA_CFLAGS="$(CFLAGS)" make
 _dsa:
 	cd $(DSA_DIR) && EXTRA_CFLAGS="$(CFLAGS)" make
+_sdsa:
+	cd $(SDSA_DIR) && EXTRA_CFLAGS="$(CFLAGS)" make
 _gost:
 	cd $(GOST_DIR) && EXTRA_CFLAGS="$(CFLAGS)" make
 _sss:
@@ -57,6 +60,8 @@ _rsa_dyn:
 	cd $(RSA_DIR) && EXTRA_CFLAGS="$(CFLAGS)" make
 _dsa_dyn:
 	cd $(DSA_DIR) && EXTRA_CFLAGS="$(CFLAGS)" make
+_sdsa_dyn:
+	cd $(SDSA_DIR) && EXTRA_CFLAGS="$(CFLAGS)" make
 _gost_dyn:
 	cd $(GOST_DIR) && EXTRA_CFLAGS="$(CFLAGS)" make
 _sss_dyn:
@@ -70,6 +75,7 @@ clean:
 	cd $(HASH_DIR) && make clean
 	cd $(RSA_DIR) && make clean
 	cd $(DSA_DIR) && make clean
+	cd $(SDSA_DIR) && make clean
 	cd $(GOST_DIR) && make clean
 	cd $(SSS_DIR) && make clean
 
