--- a/src/examples/sig/kcdsa/Makefile
+++ b/src/examples/sig/kcdsa/Makefile
@@ -1,4 +1,4 @@
-ROOT_DIR=../../..
+ROOT_DIR=../../../..
 BUILD_DIR=$(ROOT_DIR)/build
 include $(ROOT_DIR)/common.mk
 
@@ -7,24 +7,24 @@ CFLAGS := $(patsubst -I%,,$(CFLAGS))
 # Add proper includes
 CFLAGS += -I$(ROOT_DIR)/src/ -I$(ROOT_DIR)/src/external_deps
 
-all:	gostr34_10_94
+all:	kcdsa
 ifeq ($(WITH_DYNAMIC_LIBS),1)
 # If the user asked for dynamic libraries, compile versions of our binaries against them
-all:	gostr34_10_94_dyn
+all:	kcdsa_dyn
 endif
 
-gostr34_10_94:
-	$(CC) $(BIN_CFLAGS) -DGOSTR34_10_94 gostr34_10_94.c ../hash/hash.c ../dsa/dsa.c $(ROOT_DIR)/src/external_deps/print.c $(ROOT_DIR)/src/external_deps/rand.c $(BIN_LDFLAGS) $(LIBSIGN) -o gostr34_10_94
+kcdsa:
+	$(CC) $(BIN_CFLAGS) -DKCDSA kcdsa.c ../../hash/hash.c ../dsa/dsa.c $(ROOT_DIR)/src/external_deps/print.c $(ROOT_DIR)/src/external_deps/rand.c $(BIN_LDFLAGS) $(LIBSIGN) -o kcdsa
 
 # If the user asked for dynamic libraries, compile versions of our binaries against them
 ifeq ($(WITH_DYNAMIC_LIBS),1)
-gostr34_10_94_dyn:
-	$(CC) $(BIN_CFLAGS) -DGOSTR34_10_94 gostr34_10_94.c ../hash/hash.c ../dsa/dsa.c $(ROOT_DIR)/src/external_deps/print.c $(ROOT_DIR)/src/external_deps/rand.c $(BIN_LDFLAGS) $(LIBEC) -L$(BUILD_DIR) -lsign -o gostr34_10_94_dyn
+kcdsa_dyn:
+	$(CC) $(BIN_CFLAGS) -DKCDSA kcdsa.c ../../hash/hash.c ../dsa/dsa.c $(ROOT_DIR)/src/external_deps/print.c $(ROOT_DIR)/src/external_deps/rand.c $(BIN_LDFLAGS) $(LIBEC) -L$(BUILD_DIR) -lsign -o kcdsa_dyn
 endif
 
 
 clean:
-	@rm -f gostr34_10_94
-	@rm -f gostr34_10_94_dyn
+	@rm -f kcdsa
+	@rm -f kcdsa_dyn
 
 .PHONY: all clean 16 32 64 debug debug16 debug32 debug64 force_arch32 force_arch64
