--- a/src/examples/sig/dsa/Makefile
+++ b/src/examples/sig/dsa/Makefile
@@ -1,4 +1,4 @@
-ROOT_DIR=../../..
+ROOT_DIR=../../../..
 BUILD_DIR=$(ROOT_DIR)/build
 include $(ROOT_DIR)/common.mk
 
@@ -7,24 +7,24 @@ CFLAGS := $(patsubst -I%,,$(CFLAGS))
 # Add proper includes
 CFLAGS += -I$(ROOT_DIR)/src/ -I$(ROOT_DIR)/src/external_deps
 
-all:	kcdsa
+all:	dsa
 ifeq ($(WITH_DYNAMIC_LIBS),1)
 # If the user asked for dynamic libraries, compile versions of our binaries against them
-all:	kcdsa_dyn
+all:	dsa_dyn
 endif
 
-kcdsa:
-	$(CC) $(BIN_CFLAGS) -DKCDSA kcdsa.c ../hash/hash.c ../dsa/dsa.c $(ROOT_DIR)/src/external_deps/print.c $(ROOT_DIR)/src/external_deps/rand.c $(BIN_LDFLAGS) $(LIBSIGN) -o kcdsa
+dsa:
+	$(CC) $(BIN_CFLAGS) -DDSA dsa.c ../../hash/hash.c $(ROOT_DIR)/src/external_deps/print.c $(ROOT_DIR)/src/external_deps/rand.c $(BIN_LDFLAGS) $(LIBSIGN) -o dsa
 
 # If the user asked for dynamic libraries, compile versions of our binaries against them
 ifeq ($(WITH_DYNAMIC_LIBS),1)
-kcdsa_dyn:
-	$(CC) $(BIN_CFLAGS) -DKCDSA kcdsa.c ../hash/hash.c ../dsa/dsa.c $(ROOT_DIR)/src/external_deps/print.c $(ROOT_DIR)/src/external_deps/rand.c $(BIN_LDFLAGS) $(LIBEC) -L$(BUILD_DIR) -lsign -o kcdsa_dyn
+dsa_dyn:
+	$(CC) $(BIN_CFLAGS) -DDSA dsa.c ../../hash/hash.c $(ROOT_DIR)/src/external_deps/print.c $(ROOT_DIR)/src/external_deps/rand.c $(BIN_LDFLAGS) $(LIBEC) -L$(BUILD_DIR) -lsign -o dsa_dyn
 endif
 
 
 clean:
-	@rm -f kcdsa
-	@rm -f kcdsa_dyn
+	@rm -f dsa
+	@rm -f dsa_dyn
 
 .PHONY: all clean 16 32 64 debug debug16 debug32 debug64 force_arch32 force_arch64
