--- a/src/examples/sig/rsa/Makefile
+++ b/src/examples/sig/rsa/Makefile
@@ -1,4 +1,4 @@
-ROOT_DIR=../../..
+ROOT_DIR=../../../..
 BUILD_DIR=$(ROOT_DIR)/build
 include $(ROOT_DIR)/common.mk
 
@@ -7,24 +7,24 @@ CFLAGS := $(patsubst -I%,,$(CFLAGS))
 # Add proper includes
 CFLAGS += -I$(ROOT_DIR)/src/ -I$(ROOT_DIR)/src/external_deps
 
-all:	dsa
+all:	rsa
 ifeq ($(WITH_DYNAMIC_LIBS),1)
 # If the user asked for dynamic libraries, compile versions of our binaries against them
-all:	dsa_dyn
+all:	rsa_dyn
 endif
 
-dsa:
-	$(CC) $(BIN_CFLAGS) -DDSA dsa.c ../hash/hash.c $(ROOT_DIR)/src/external_deps/print.c $(ROOT_DIR)/src/external_deps/rand.c $(BIN_LDFLAGS) $(LIBSIGN) -o dsa
+rsa:
+	$(CC) $(BIN_CFLAGS) -DRSA rsa.c ../../hash/hash.c $(ROOT_DIR)/src/external_deps/print.c $(ROOT_DIR)/src/external_deps/rand.c $(BIN_LDFLAGS) $(LIBSIGN) -o rsa
 
 # If the user asked for dynamic libraries, compile versions of our binaries against them
 ifeq ($(WITH_DYNAMIC_LIBS),1)
-dsa_dyn:
-	$(CC) $(BIN_CFLAGS) -DDSA dsa.c ../hash/hash.c $(ROOT_DIR)/src/external_deps/print.c $(ROOT_DIR)/src/external_deps/rand.c $(BIN_LDFLAGS) $(LIBEC) -L$(BUILD_DIR) -lsign -o dsa_dyn
+rsa_dyn:
+	$(CC) $(BIN_CFLAGS) -DRSA rsa.c ../../hash/hash.c $(ROOT_DIR)/src/external_deps/print.c $(ROOT_DIR)/src/external_deps/rand.c $(BIN_LDFLAGS) $(LIBEC) -L$(BUILD_DIR) -lsign -o rsa_dyn
 endif
 
 
 clean:
-	@rm -f dsa
-	@rm -f dsa_dyn
+	@rm -f rsa
+	@rm -f rsa_dyn
 
 .PHONY: all clean 16 32 64 debug debug16 debug32 debug64 force_arch32 force_arch64
